[gd_scene load_steps=45 format=2]

[ext_resource path="res://Animations/Cow/IdleDown_02.png" type="Texture" id=1]
[ext_resource path="res://Animations/Cow/IdleDown_03.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Cow.gd" type="Script" id=3]
[ext_resource path="res://Animations/Cow/IdleDown_00.png" type="Texture" id=4]
[ext_resource path="res://Animations/Cow/IdleDown_05.png" type="Texture" id=5]
[ext_resource path="res://Animations/Cow/IdleDown_04.png" type="Texture" id=6]
[ext_resource path="res://Animations/Cow/IdleDown_06.png" type="Texture" id=7]
[ext_resource path="res://Animations/Cow/IdleDown_01.png" type="Texture" id=8]
[ext_resource path="res://Animations/Cow/WalkDown_06.png" type="Texture" id=9]
[ext_resource path="res://Animations/Cow/WalkDown_05.png" type="Texture" id=10]
[ext_resource path="res://Animations/Cow/IdleUp_00.png" type="Texture" id=11]
[ext_resource path="res://Animations/Cow/WalkDown_04.png" type="Texture" id=12]
[ext_resource path="res://Animations/Cow/IdleDown_09.png" type="Texture" id=13]
[ext_resource path="res://Animations/Cow/IdleUp_05.png" type="Texture" id=14]
[ext_resource path="res://Animations/Cow/IdleUp_07.png" type="Texture" id=15]
[ext_resource path="res://Animations/Cow/WalkDown_08.png" type="Texture" id=16]
[ext_resource path="res://Animations/Cow/WalkDown_09.png" type="Texture" id=17]
[ext_resource path="res://Animations/Cow/WalkDown_03.png" type="Texture" id=18]
[ext_resource path="res://Animations/Cow/WalkUp_03.png" type="Texture" id=19]
[ext_resource path="res://Animations/Cow/WalkUp_05.png" type="Texture" id=20]
[ext_resource path="res://Animations/Cow/WalkUp_06.png" type="Texture" id=21]
[ext_resource path="res://Animations/Cow/IdleUp_04.png" type="Texture" id=22]
[ext_resource path="res://Animations/Cow/WalkUp_07.png" type="Texture" id=23]
[ext_resource path="res://Animations/Cow/IdleDown_07.png" type="Texture" id=24]
[ext_resource path="res://Animations/Cow/WalkUp_08.png" type="Texture" id=25]
[ext_resource path="res://Animations/Cow/IdleUp_02.png" type="Texture" id=26]
[ext_resource path="res://Animations/Cow/IdleUp_08.png" type="Texture" id=27]
[ext_resource path="res://Animations/Cow/IdleUp_09.png" type="Texture" id=28]
[ext_resource path="res://Animations/Cow/WalkUp_00.png" type="Texture" id=29]
[ext_resource path="res://Animations/Cow/WalkUp_01.png" type="Texture" id=30]
[ext_resource path="res://Animations/Cow/WalkDown_07.png" type="Texture" id=31]
[ext_resource path="res://Animations/Cow/WalkDown_00.png" type="Texture" id=32]
[ext_resource path="res://Animations/Cow/IdleUp_03.png" type="Texture" id=33]
[ext_resource path="res://Animations/Cow/WalkDown_02.png" type="Texture" id=34]
[ext_resource path="res://Animations/Cow/WalkUp_04.png" type="Texture" id=35]
[ext_resource path="res://Animations/Cow/IdleUp_01.png" type="Texture" id=36]
[ext_resource path="res://Animations/Cow/IdleDown_08.png" type="Texture" id=37]
[ext_resource path="res://Animations/Cow/IdleUp_06.png" type="Texture" id=38]
[ext_resource path="res://Animations/Cow/WalkDown_01.png" type="Texture" id=39]
[ext_resource path="res://Animations/Cow/WalkUp_02.png" type="Texture" id=40]
[ext_resource path="res://Animations/Cow/WalkUp_09.png" type="Texture" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 40 ), ExtResource( 19 ), ExtResource( 35 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 41 ) ],
"loop": false,
"name": "WalkUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 36 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 38 ), ExtResource( 15 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 31 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "WalkDown",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 24 ), ExtResource( 37 ), ExtResource( 13 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 44.8733

[sub_resource type="CircleShape2D" id=3]
radius = 39.0629

[node name="Cow" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 3 )

[node name="Animations" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "WalkUp"
frame = 9
playing = true

[node name="MilkingArea" type="Area2D" parent="Animations"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Animations/MilkingArea"]
rotation = 1.21824
shape = SubResource( 2 )

[node name="WalkTimer" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
[connection signal="animation_finished" from="Animations" to="." method="_on_animation_finished"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
